--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#">Logo</a>
+        <a href="#"><img src="/assets/img/logo.png" alt="Logo"> </a>
         <nav>
             <ul>
                 <li><a href="">Skills</a></li>
