--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>Daniel Vitor </title>
 </head>
 <body>
     <header>
         <a href="#"><img src="/assets/img/logo.png" alt="Logo"> </a>
         <nav>
             <ul>
-                <li><a href="">Skills</a></li>
+                <li><a href="" lang="en" >Skills</a></li>
                 <li><a href="">Projetos</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Contatos</a></li>
-                <li><a href="">Dowloads CV</a></li>
+                <li><a href="" lang="en">Dowloads CV</a></li>
             </ul>
         </nav>
     </header>
