--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="">Projetos</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Contatos</a></li>
-                <li><a href="" lang="en">Dowloads CV</a></li>
+                <li><a id="button" href="" lang="en">Dowloads CV</a></li>
             </ul>
         </nav>
     </header>
