--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="/assets/img/logo.png" alt="Logo"> </a>
+        <img src="/assets/img/logo.png" alt="Logo">
         <nav>
             <ul>
                 <li><a href="" lang="en" >Skills</a></li>
