--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/assets/img/logo.png" alt="Logo">
+        <h1 class="logo">Daniel Vitor</h1>
         <nav>
             <ul>
                 <li><a href="" lang="en" >Skills</a></li>
@@ -24,7 +24,22 @@
             </ul>
         </nav>
     </header>
-
+    <div class="man-waapper">
+        <section class="baner">
+            <div class="direita">
+                <div class="nome">
+                    <h1>Daniel Vitor</h1>
+                    <h2>FrontEnd Developer</h2>
+                </div>
+            </div>
+        </section>
+        <section  class="">
+            
+        </section>
+        <section  class="contatos">
+            
+        </section>
+    </div>
 
 </body>
 </html>
