--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Josefin+Sans:wght@300;400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/componentes/title.css">
     <title>Daniel Vitor </title>
 </head>
 <body>
@@ -24,13 +25,21 @@
             </ul>
         </nav>
     </header>
+
+    <h1>Daniel Vitor</h1>
+    <h2>FrontEnd Developer</h2>
+    <div class="nome">
+
+    </div>
+
+
+
+
+
     <div class="man-waapper">
         <section class="baner">
             <div class="direita">
-                <div class="nome">
-                    <h1>Daniel Vitor</h1>
-                    <h2>FrontEnd Developer</h2>
-                </div>
+
             </div>
         </section>
         <section  class="">
