--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/componentes/title.css">
+    <link rel="stylesheet" href="styles/componentes/subtitle.css">
     <title>Daniel Vitor </title>
 </head>
 <body>
