--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/componentes/title.css">
     <link rel="stylesheet" href="styles/componentes/subtitle.css">
+    <link rel="stylesheet" href="styles/componentes/box.css">
     <title>Daniel Vitor </title>
 </head>
 <body>
@@ -27,10 +28,9 @@
         </nav>
     </header>
 
-    <h1>Daniel Vitor</h1>
-    <h2>FrontEnd Developer</h2>
-    <div class="nome">
-
+    <div id="box">
+        <h1>Daniel Vitor</h1>
+        <h2>FrontEnd Developer</h2>
     </div>
 
 
