--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/componentes/title.css">
     <link rel="stylesheet" href="styles/componentes/subtitle.css">
     <link rel="stylesheet" href="styles/componentes/box.css">
+    <link rel="stylesheet" href="styles/componentes/button.css">
     <title>Daniel Vitor </title>
 </head>
 <body>
@@ -23,7 +24,7 @@
                 <li><a href="">Projetos</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Contatos</a></li>
-                <li><a id="button" href="" lang="en">Dowloads CV</a></li>
+                <li><a class="button" href="" lang="en">Dowloads CV</a></li>
             </ul>
         </nav>
     </header>
@@ -32,10 +33,9 @@
         <h1>Daniel Vitor</h1>
         <h2>FrontEnd Developer</h2>
     </div>
-
-
-
-
+    <li><a class="button" href="" >Contatos</a></li>
+    <li><a class="button" href="" lang="en">Dowloads CV</a></li>
+    <button class="button">dadasd</button>
 
     <div class="man-waapper">
         <section class="baner">
