--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Josefin+Sans:wght@300;400;600&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/componentes/title.css">
-    <link rel="stylesheet" href="styles/componentes/subtitle.css">
-    <link rel="stylesheet" href="styles/componentes/box.css">
-    <link rel="stylesheet" href="styles/componentes/button.css">
-    <title>Daniel Vitor </title>
-</head>
-<body>
-    <header>
-        <h1 class="logo">Daniel Vitor</h1>
-        <nav>
-            <ul>
-                <li><a href="" lang="en" >Skills</a></li>
-                <li><a href="">Projetos</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Contatos</a></li>
-                <li><a class="button" href="" lang="en">Dowloads CV</a></li>
-            </ul>
-        </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Josefin+Sans:wght@300;400;600&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/componentes/header.css" />
+    <link rel="stylesheet" href="styles/componentes/logo.css" />
+    <link rel="stylesheet" href="styles/componentes/title.css" />
+    <link rel="stylesheet" href="styles/componentes/subtitle.css" />
+    <link rel="stylesheet" href="styles/componentes/box.css" />
+    <link rel="stylesheet" href="styles/componentes/button.css" />
+    <link rel="stylesheet" href="styles/componentes/action.css" />
+
+    <title>Daniel Vitor</title>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="logo">Daniel Vitor</h1>
+      <nav class="navigation">
+        <a class="action" href="" lang="en">Skills</a>
+
+        <a class="action" href="">Projetos</a>
+
+        <a class="action" href="">Sobre</a>
+
+        <a class="action" href="">Contatos</a>
+
+        <a class="action" class="button" href="" lang="en">Dowloads CV</a>
+      </nav>
     </header>
 
-    <div id="box">
-        <h1>Daniel Vitor</h1>
-        <h2>FrontEnd Developer</h2>
+    <div class="box">
+      <h1 class="title">Daniel Vitor</h1>
+      <h2 class="subtitle">FrontEnd Developer</h2>
     </div>
-    <li><a class="button" href="" >Contatos</a></li>
-    <li><a class="button" href="" lang="en">Dowloads CV</a></li>
+    <a class="button" href="">Contatos</a>
+    <a class="button" href="" lang="en">Dowloads CV</a>
     <button class="button">dadasd</button>
 
     <div class="man-waapper">
-        <section class="baner">
-            <div class="direita">
-
-            </div>
-        </section>
-        <section  class="">
-            
-        </section>
-        <section  class="contatos">
-            
-        </section>
+      <section class="baner">
+        <div class="direita"></div>
+      </section>
+      <section class=""></section>
+      <section class="contatos"></section>
     </div>
-
-</body>
+  </body>
 </html>
