--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <link rel="stylesheet" href="styles/componentes/box.css" />
     <link rel="stylesheet" href="styles/componentes/button.css" />
     <link rel="stylesheet" href="styles/componentes/action.css" />
-
+    <link rel="stylesheet" href="styles/componentes/banner.css" />
     <title>Daniel Vitor</title>
   </head>
   <body>
+
     <header class="header">
       <h1 class="logo">Daniel Vitor</h1>
-      <nav class="navigation">
+      <nav class="">
         <a class="action" href="" lang="en">Skills</a>
 
         <a class="action" href="">Projetos</a>
@@ -37,21 +38,26 @@
         <a class="action" class="button" href="" lang="en">Dowloads CV</a>
       </nav>
     </header>
+    <section class="banner">
+        <div class="wapper">
+            <div class="box">
 
-    <div class="box">
-      <h1 class="title">Daniel Vitor</h1>
-      <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
-    <a class="button" href="">Contatos</a>
-    <a class="button" href="" lang="en">Dowloads CV</a>
-    <button class="button">dadasd</button>
+                <h1 class="title">Daniel Vitor</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+          
+              </div>
+          
+              <div class="navigation">
+                <a class="button" href="">Contatos</a>
+                <a class="button" href="" lang="en">Dowloads CV</a> 
+              </div>
 
-    <div class="man-waapper">
-      <section class="baner">
-        <div class="direita"></div>
+        </div>
+
+    </section>
+      <section class="">
       </section>
-      <section class=""></section>
-      <section class="contatos"></section>
-    </div>
+      <section class="contatos">
+    </section>
   </body>
 </html>
