--- a/index.html
+++ b/index.html
@@ -55,9 +55,20 @@
         </div>
 
     </section>
-      <section class="">
-      </section>
-      <section class="contatos">
+    <section class="skills">
+
+    </section>
+    <section class="projetos">
+
+    </section>
+    <section class="sobre">
+
+    </section>
+    <section class="contatos">
+
+    </section>
+    <section class="">
+
     </section>
   </body>
 </html>
