--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="skills">
         <div class="wraper-skills">
           <div class="">
-            <h1 class="title">skills</h1>
+            <h1 class="title -second">skills</h1>
           </div>
           <div class="skill">
             
