--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="styles/componentes/wrapper-skill.css">
     <link rel="stylesheet" href="styles/componentes/footer.css">
     <link rel="stylesheet" href="styles/componentes/carriusel.css">
+    <link rel="stylesheet" href="styles/componentes/wapper.css">
     <title>Daniel Vitor</title>
   </head>
   <body>
@@ -170,20 +171,21 @@
 -->
     </section>
     <section class="section -second">
-
       <h2 class="main-title -second">Projetos</h2>
-
-      <div id="items-wrapper">
-        <div id="items">
-
+      <div class="wapper-proget">
+        <div class="box">
+          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
         </div>
+        <div class="box">
+          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
+        </div>
+        <div class="box">
+          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
+        </div>    
       </div>
-
-
     </section>
- 
     <section class="">
-
+   
     </section>
     <!--
     <footer class="footer">
