--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Josefin+Sans:wght@300;400;600&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/componentes/header.css" />
-    <link rel="stylesheet" href="styles/componentes/logo.css" />
-    <link rel="stylesheet" href="styles/componentes/main-title.css" />
-    <link rel="stylesheet" href="styles/componentes/subtitle.css" />
-    <link rel="stylesheet" href="styles/componentes/box.css" />
-    <link rel="stylesheet" href="styles/componentes/button.css" />
-    <link rel="stylesheet" href="styles/componentes/action.css" />
-    <link rel="stylesheet" href="styles/componentes/banner.css" />
-    <link rel="stylesheet" href="styles/componentes/progress-bar.css" />
-    <link rel="stylesheet" href="styles/componentes/section.css">
-    <link rel="stylesheet" href="styles/componentes/skill-tec.css">
-    <link rel="stylesheet" href="styles/componentes/wrapper-skill.css">
-    <link rel="stylesheet" href="styles/componentes/footer.css">
-    <link rel="stylesheet" href="styles/componentes/carriusel.css">
-    <link rel="stylesheet" href="styles/componentes/wapper.css">
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/componentes/header.css" />
+    <link rel="stylesheet" href="./styles/componentes/logo.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-title.css" />
+    <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
+    <link rel="stylesheet" href="./styles/componentes/box.css" />
+    <link rel="stylesheet" href="./styles/componentes/button.css" />
+    <link rel="stylesheet" href="./styles/componentes/action.css" />
+    <link rel="stylesheet" href="./styles/componentes/banner.css" />
+    <link rel="stylesheet" href="./styles/componentes/progress-bar.css" />
+    <link rel="stylesheet" href="./styles/componentes/section.css">
+    <link rel="stylesheet" href="./styles/componentes/skill-tec.css">
+    <link rel="stylesheet" href="./styles/componentes/wrapper-skill.css">
+    <link rel="stylesheet" href="./styles/componentes/footer.css">
+    <link rel="stylesheet" href="./styles/componentes/carriusel.css">
+    <link rel="stylesheet" href="./styles/componentes/wapper.css">
+    <link rel="stylesheet" href="./styles/componentes/card-project.css">
+    <link rel="stylesheet" href="./styles/componentes/wrapper-card.css">
     <title>Daniel Vitor</title>
   </head>
   <body>
-
     <header class="header">
       <h1 class="logo">Daniel Vitor</h1>
       <nav class="">
@@ -142,46 +143,31 @@
         </article>
   
       </div>
-
-      <!--
-      <dl class="skill-tec" >
-        <dd class="icon"> 
-           <img src="/img/ico_css3.png" alt="logo css em pixel art">
-          </dd>
-        <dt class="title">css</dt>
-        <dd >
-          <progress class="progress-bar" value="70" max="100">70 %</progress>
-        </dd>
-      </dl>
-
-
-      <dl class="skill-tec">
-
-
-      <dl class="skill-tec">
- 
-        <dd class="icon"> 
-           <img src="/img/ico_ux.png" alt="logo ux em pixel art">
-        </dd>
-        <dt class="title">ux</dt>
-        <dd >
-          <progress class="progress-bar" value="70" max="100">70 %</progress>
-        </dd>
-      </dl>
--->
     </section>
-    <section class="section -second">
+    <section class="section -second -bdFirst">
+
+
       <h2 class="main-title -second">Projetos</h2>
-      <div class="wapper-proget">
-        <div class="box">
-          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
-        </div>
-        <div class="box">
-          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
-        </div>
-        <div class="box">
-          <img class="icon" src="/img/ico_css3.png" alt="logo css em pixel art">
-        </div>    
+      <div class="wrapper-card">
+        <a href="https://danielvito-pereira.github.io/Base_Apparel_coming_soon_page/" target="_blank">
+          <figure class="card-project">
+            <img  class="logo" src="./img/base_apparel.png" alt="base Apparel">
+          
+          </figure>
+        </a>
+
+        <a href="https://danielvito-pereira.github.io/NLW_Return/" target="_blank">
+          <figure class="card-project">
+            <img  class="logo" src="./img/nlw.png" alt="nlw">
+            
+          </figure>
+       </a>
+
+       <a href="https://danielfilx.vercel.app/" target="_blank">
+          <figure class="card-project -blue ">
+            <img  class="logo" alt="./img/daniel.png">
+          </figure>
+        </a>
       </div>
     </section>
     <section class="">
