--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
     <link rel="stylesheet" href="./styles/componentes/box.css" />
     <link rel="stylesheet" href="./styles/componentes/button.css" />
-    <link rel="stylesheet" href="./styles/componentes/action.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-action.css" />
     <link rel="stylesheet" href="./styles/componentes/banner.css" />
     <link rel="stylesheet" href="./styles/componentes/progress-bar.css" />
     <link rel="stylesheet" href="./styles/componentes/section.css">
@@ -35,15 +35,15 @@
     <header class="header">
       <h1 class="logo">Daniel Vitor</h1>
       <nav class="">
-        <a class="action" href="" lang="en">Skills</a>
+        <a class="main-action" href="#" lang="en">Skills</a>
 
-        <a class="action" href="">Projetos</a>
+        <a class="main-action" href="#">Projetos</a>
 
-        <a class="action" href="">Sobre</a>
+        <a class="main-action" href="#">Sobre</a>
 
-        <a class="action" href="">Contatos</a>
+        <a class="main-action" href="#">Contatos</a>
 
-        <a class="action" class="button" href="" lang="en">Dowloads CV</a>
+        <a class="main-action" class="button" href="#" lang="en">Dowloads CV</a>
       </nav>
     </header>
     <section class="banner">
