change banner for main-banner

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./styles/componentes/box.css" />
     <link rel="stylesheet" href="./styles/componentes/button.css" />
     <link rel="stylesheet" href="./styles/componentes/main-action.css" />
-    <link rel="stylesheet" href="./styles/componentes/banner.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-banner.css" />
     <link rel="stylesheet" href="./styles/componentes/progress-bar.css" />
     <link rel="stylesheet" href="./styles/componentes/section.css">
     <link rel="stylesheet" href="./styles/componentes/skill-tec.css">
@@ -46,7 +46,7 @@
         <a class="main-action" class="button" href="#" lang="en">Dowloads CV</a>
       </nav>
     </header>
-    <section class="banner">
+    <section class="main-banner">
         <div class="wapper">
             <div class="box">
 
