--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles/componentes/logo.css" />
     <link rel="stylesheet" href="./styles/componentes/main-title.css" />
     <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
-    <link rel="stylesheet" href="./styles/componentes/box.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-box.css" />
     <link rel="stylesheet" href="./styles/componentes/button.css" />
     <link rel="stylesheet" href="./styles/componentes/main-action.css" />
     <link rel="stylesheet" href="./styles/componentes/main-banner.css" />
@@ -48,7 +48,7 @@
     </header>
     <section class="main-banner">
         <div class="wapper">
-            <div class="box">
+            <div class="main-box">
 
                 <h1 class="main-title">Daniel Vitor</h1>
                 <h2 class="subtitle">FrontEnd Developer</h2>
