Change button for main-button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/componentes/main-title.css" />
     <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
     <link rel="stylesheet" href="./styles/componentes/main-box.css" />
-    <link rel="stylesheet" href="./styles/componentes/button.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-button.css" />
     <link rel="stylesheet" href="./styles/componentes/main-action.css" />
     <link rel="stylesheet" href="./styles/componentes/main-banner.css" />
     <link rel="stylesheet" href="./styles/componentes/progress-bar.css" />
@@ -43,7 +43,7 @@
 
         <a class="main-action" href="#">Contatos</a>
 
-        <a class="main-action" class="button" href="#" lang="en">Dowloads CV</a>
+        <a class="main-action" class="main-button" href="#" lang="en">Dowloads CV</a>
       </nav>
     </header>
     <section class="main-banner">
@@ -56,8 +56,8 @@
               </div>
           
               <div class="navigation">
-                <a class="button" href="">Contatos</a>
-                <a class="button" href="" lang="en">Dowloads CV</a> 
+                <a class="main-button" href="">Contatos</a>
+                <a class="main-button" href="" lang="en">Dowloads CV</a> 
               </div>
 
         </div>
