--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/componentes/header.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-header.css" />
     <link rel="stylesheet" href="./styles/componentes/logo.css" />
     <link rel="stylesheet" href="./styles/componentes/main-title.css" />
     <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
@@ -32,7 +32,7 @@
     <title>Daniel Vitor</title>
   </head>
   <body>
-    <header class="header">
+    <header class="main-header">
       <h1 class="logo">Daniel Vitor</h1>
       <nav class="">
         <a class="main-action" href="#" lang="en">Skills</a>
