change section for main-section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./styles/componentes/main-action.css" />
     <link rel="stylesheet" href="./styles/componentes/main-banner.css" />
     <link rel="stylesheet" href="./styles/componentes/progress-bar.css" />
-    <link rel="stylesheet" href="./styles/componentes/section.css">
+    <link rel="stylesheet" href="./styles/componentes/main-section.css">
     <link rel="stylesheet" href="./styles/componentes/skill-tec.css">
     <link rel="stylesheet" href="./styles/componentes/wrapper-skill.css">
     <link rel="stylesheet" href="./styles/componentes/footer.css">
@@ -63,7 +63,7 @@
         </div>
 
     </section>
-    <section class="section">
+    <section class="main-section">
 
       <h2 class="main-title -second">skills</h2>
      
@@ -144,7 +144,7 @@
   
       </div>
     </section>
-    <section class="section -second -bdFirst">
+    <section class="main-section -second -bdFirst">
 
 
       <h2 class="main-title -second">Projetos</h2>
