change subtatle for main-subtitle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/componentes/main-header.css" />
     <link rel="stylesheet" href="./styles/componentes/logo.css" />
     <link rel="stylesheet" href="./styles/componentes/main-title.css" />
-    <link rel="stylesheet" href="./styles/componentes/subtitle.css" />
+    <link rel="stylesheet" href="./styles/componentes/main-subtitle .css" />
     <link rel="stylesheet" href="./styles/componentes/main-box.css" />
     <link rel="stylesheet" href="./styles/componentes/main-button.css" />
     <link rel="stylesheet" href="./styles/componentes/main-action.css" />
@@ -51,7 +51,7 @@
             <div class="main-box">
 
                 <h1 class="main-title">Daniel Vitor</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
+                <h2 class="main-subtitle ">FrontEnd Developer</h2>
           
               </div>
           
