--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="./styles/componentes/wapper.css">
     <link rel="stylesheet" href="./styles/componentes/card-project.css">
     <link rel="stylesheet" href="./styles/componentes/wrapper-card.css">
+    <link rel="stylesheet" href="./styles/componentes/text.css">
+    <link rel="stylesheet" href="./styles/componentes/carrocel.css">
     <title>Daniel Vitor</title>
   </head>
   <body>
@@ -163,16 +165,53 @@
           </figure>
        </a>
 
-       <a href="https://danielfilx.vercel.app/" target="_blank">
+       <a href="https://danielvito-pereira.github.io/imersaocss/" target="_blank">
           <figure class="card-project -blue ">
-            <img  class="logo" alt="./img/daniel.png">
+            <img  class="logo" alt="./img/daniel_flix.png">
           </figure>
         </a>
       </div>
     </section>
-    <section class="">
-   
+    <section class="main-section -sobre -pColor">
+      <h2 class="main-title -second">Sobre</h2>
+      <ul>
+        <div class="slider">
+          <button></button>
+          <div>
+            <div>
+              
+            </div>
+          </div>
+          <button></button>
+        </div>
+      </ul>
+      <!--
+      <div class="carrocel">
+        <div class="wall-x"></div>
+        <div class="wall-x"></div>
+        <div class="wall-x"></div>
+        <div class="wall-x"></div>
+        <div class="wall-x"></div>
+      </div>
+      -->
+
+
+      <div class="text">
+        <p>Hoje, instrutor e desenvolvedor FrontEnd/UX pela CollabCode, Marco já trabalhou nas mais diversas áreas. Foi palhaço, entrou na área de TI como desenvolvedor HMI/PLC e gosta de ir descobrindo seu caminho conforme o percorre. Marco também tem uma crescente presença em comunidades de UX e Front-end, trabalhando para uní-las, palestra em empresas e eventos como o WebBR, escreve em diversos blogs como o da Caelum, o Pinceladas da Web e seu Medium, quando não está jogando Airsoft ou trocando ideias com amigos.</p>
+      </div>
+
     </section>
+
+    <section class="main-section -contato">
+      <h2 class="main-title -second">Contato</hh2>
+   
+        <form action="">
+
+        </form>
+
+    </section>
+
+    <footer></footer>
     <!--
     <footer class="footer">
 
