--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="./styles/componentes/main-footer.css">
     <link rel="stylesheet" href="./styles/componentes/main-label.css">
     <link rel="stylesheet" href="./styles/componentes/main-input.css">
+    <link rel="stylesheet" href="./styles/componentes/main-form.css">
     <title>Daniel Vitor</title>
   </head>
   <body>
@@ -235,8 +236,9 @@
       
     </section>
 
-    <form action="">
-
+    </section>
+  <form class="main-form "action="">
+      <h1 class="main-title -second">Contato</h1>
       <label class="main-label" for="name">Nome</label>
       <input class="main-input" type="text" id="name">
 
