--- a/index.html
+++ b/index.html
@@ -238,17 +238,17 @@
 
     </section>
   <form class="main-form "action="">
-      <h1 class="main-title -second">Contato</h1>
+      <legend class="main-title -second">Contato</legend>
       <label class="main-label" for="name">Nome</label>
-      <input class="main-input" type="text" id="name">
+      <input class="main-input" type="text" id="name" required>
 
-      <label class="main-label" for="email" >Email</label>
-      <input class="main-input" type="email" id="email">
+      <label class="main-label" for="email"  >Email</label>
+      <input class="main-input" type="email" id="email" required>
 
       <label class="main-label" for="message"> Mensagem </label>
-      <textarea class="main-input -textarea"name="" id="message" ></textarea>
+      <textarea class="main-input -textarea"name="" id="message" required ></textarea>
 
-      <button class="main-button -formu" type="submit">Enviar</button>
+      <button class="main-button -full" type="submit" >Enviar</button>
     
     </form>
 
